--- a/assets/style.css
+++ b/assets/style.css
@@ -7,10 +7,12 @@
     font-family: 'Ubuntu';
 }
 
-#banner {
-    max-width: 1300px;
+#max-width {
     padding: 0 80px;
 }
+
+
+/*Logo bar*/
 
 #navigation-bar {
     position: absolute;
@@ -28,6 +30,9 @@
 #navigation-bar #logo a span {
     color: crimson;
 }
+
+
+/*Menu bar*/
 
 #menu {
     float: right;
@@ -50,17 +55,22 @@
     color: crimson;
 }
 
+
+/*Home section*/
+
 #home {
     display: flex;
-    background: url("./images/me.jpg") no-repeat center;
-    background-size: 100%;
+    background: url("./images/tea_html_coding.jpg") no-repeat center;
+    background-size: cover;
+    /*To fill to the height*/
     background-color: black;
+    /*Size of the screen*/
     height: 100vh;
     color: #fff;
     min-width: 500px;
 }
 
-#home #banner {
+#home #max-width {
     margin: auto 0 auto 40px;
 }
 
@@ -82,4 +92,179 @@
 #home #home-content #text-3 span {
     color: crimson;
     font-weight: 500;
+}
+
+#home #home-content a {
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+
+section {
+    padding: 100px 0;
+}
+
+#home #home-content a:hover {
+    color: crimson;
+    background: none;
+}
+
+
+/*Similar content styling*/
+
+#about,
+#services {
+    padding: 100px 0;
+}
+
+#max-width .title {
+    position: relative;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+#max-width .title::before {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: black;
+    transform: translateX(-50%);
+}
+
+#max-width .title::after {
+    position: absolute;
+    bottom: -13px;
+    left: 50%;
+    font-size: 20px;
+    color: crimson;
+    padding: 5px;
+    background: white;
+    transform: translateX(-50%);
+}
+
+
+/*About section*/
+
+#about .title::after {
+    content: "Who I am";
+}
+
+#about-content,
+#card {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+#about-content #column-left {
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto 60px;
+}
+
+#about-content #column-left img {
+    height: 100%;
+    width: 400px;
+    border-radius: 6px;
+}
+
+#about-content #column-right {
+    width: 480px;
+    padding: 20px;
+    justify-content: center;
+    margin: 0 auto 60px;
+}
+
+#about-content #column-right #text {
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+#about-content #column-right span {
+    color: crimson;
+}
+
+#about-content #column-right p {
+    text-align: justify;
+}
+
+#about-content #column-right a {
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+
+#about-content #column-right a:hover {
+    color: crimson;
+    background: none;
+}
+
+
+/*Services section*/
+
+#services {
+    color: #fff;
+    background: #111;
+}
+
+#services .title::before {
+    background: white;
+}
+
+#services .title::after {
+    content: "My Services";
+    background: #111;
+}
+
+#services #services-content #card {}
+
+#services #services-content #box {
+    width: 300px;
+    margin-left: 6%;
+    margin-bottom: 20px;
+    background-color: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#services #services-content #box:hover {
+    background: crimson;
+    transform: scale(1.05);
+}
+
+#services #services-content #card #img {
+    filter: invert();
+    width: 40px;
+    height: 40px;
+}
+
+#services #services-content #card #box #text {
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
 }
