--- a/assets/style.css
+++ b/assets/style.css
@@ -63,7 +63,7 @@ html {
 
 /*Scroll up buttom*/
 
-#scroll-up-buttom {
+.scroll-up-buttom {
     position: fixed;
     height: 45px;
     width: 42px;
@@ -76,9 +76,14 @@ html {
     font-size: 30px;
     border-radius: 6px;
     cursor: pointer;
-    transition: all 2s ease;
+    transition: all 1s ease;
     pointer-events: auto;
-    opacity: 0.7;
+    opacity: 0.1;
+}
+
+.scroll-up-buttom:hover {
+    opacity: 1;
+    transition: all 1s ease;
 }
 
 
