--- a/assets/style.css
+++ b/assets/style.css
@@ -295,7 +295,7 @@ section {
     transform: scale(1.06);
 }
 
-#Projects #Projects-content .box a {
+#Projects #Projects-content a {
     color: white;
 }
 
