--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap');
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0vh;
+    padding: 0vh;
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Ubuntu';
@@ -12,7 +12,7 @@ html {
 }
 
 .max-width {
-    padding: 0 80px;
+    padding: 0 8vh;
 }
 
 
@@ -22,13 +22,14 @@ html {
     position: absolute;
     list-style: none;
     width: 100%;
-    padding: 30px 0;
+    padding: 5vh 0;
+    /* to add the gradiant coming from the TOP*/
     background: -webkit-radial-gradient( 10% 0%, 100% 30%, rgb(0, 0, 0) 0%, rgba(0, 0, 0, 0) 230%);
 }
 
 #navigation-bar #logo a {
     color: #fff;
-    font-size: 30px;
+    font-size: 3vh;
     font-weight: 600;
 }
 
@@ -50,9 +51,9 @@ html {
 
 #navigation-bar #menu li a {
     color: #fff;
-    font-size: 18px;
+    font-size: 1.9vh;
     font-weight: 500;
-    margin-left: 25px;
+    margin-left: 6vh;
     transition: color 0.4s ease;
 }
 
@@ -65,16 +66,15 @@ html {
 
 .scroll-up-buttom {
     position: fixed;
-    height: 45px;
-    width: 42px;
+    height: 5vh;
+    width: 5vh;
     background: crimson;
-    right: 30px;
-    bottom: 10px;
+    right: 4vh;
+    bottom: 2vh;
     text-align: center;
-    line-height: 50px;
+    line-height: 7vh;
     z-index: 9999;
-    font-size: 30px;
-    border-radius: 6px;
+    border-radius: 1vh;
     cursor: pointer;
     transition: all 1s ease;
     pointer-events: auto;
@@ -97,27 +97,27 @@ html {
     background-color: black;
     /*Size of the screen*/
     height: 100vh;
+    min-height: 100vh;
     color: #fff;
-    min-width: 500px;
 }
 
 #home .max-width {
-    margin: auto 0 auto 40px;
+    margin: auto 0 auto 4vh;
 }
 
 #home #home-content #text-1 {
-    font-size: 30px;
+    font-size: 3vh;
 }
 
 #home #home-content #text-2 {
-    font-size: 70px;
+    font-size: 7vh;
     font-weight: 600;
-    margin-left: -3px;
+    margin-left: -0.3vh;
 }
 
 #home #home-content #text-3 {
-    font-size: 40px;
-    margin: 5px 0;
+    font-size: 4vh;
+    margin: 0.1vh 0vh;
 }
 
 #home #home-content #text-3 span {
@@ -129,11 +129,11 @@ html {
     display: inline-block;
     background: crimson;
     color: #fff;
-    font-size: 25px;
-    padding: 12px 36px;
-    margin-top: 20px;
+    font-size: 2.3vh;
+    padding: 1vh 3.6vh;
+    margin-top: 2vh;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 0.3vh solid crimson;
     transition: all 0.3s ease;
 }
 
@@ -212,14 +212,12 @@ section {
 }
 
 #about-content .column-left img {
-    height: 100%;
-    width: 400px;
+    width: 40vh;
     border-radius: 6px;
 }
 
 #about-content .column-right {
-    width: 50%;
-    min-width: 400px;
+    width: 85vh;
     text-align: left;
     margin: 0 auto 5%;
 }
@@ -265,6 +263,9 @@ section {
     color: #fff;
     background: #111;
     background: url("./images/tea_html_coding.jpg") center no-repeat;
+    /* This will cause the image to shrink to fit
+    the space it has, should the viewport size be
+    smaller than the image. */
     background-size: cover;
 }
 
@@ -279,12 +280,13 @@ section {
 }
 
 #Projects #Projects-content .box {
-    width: 250px;
-    height: 320px;
+    width: 26vh;
+    min-width: 280px;
+    height: 32vh;
     background-color: #222;
     text-align: center;
     border-radius: 6px;
-    padding: 20px 25px;
+    padding: 2vh 2.5vh;
     cursor: pointer;
     transition: all 0.3s ease;
 }
@@ -296,7 +298,8 @@ section {
 
 #Projects #Projects-content a {
     color: white;
-    margin: 0.6% 0.6% 0.6%;
+    margin: 0.8vh 0.8vh 0.8vh;
+    margin: min(0.5vh 0.5vh 0.5vh)
 }
 
 #Projects #Projects-content #card .img {
@@ -320,45 +323,45 @@ section {
 }
 
 #skills #skills-content .column-left {
-    width: 40%;
-    min-width: 350px;
+    width: 50vh;
+    min-width: 35vh;
+    margin: 0 auto 5%;
+    width: 50%;
+    justify-content: center;
 }
 
 #skills #skills-content .column-left .text {
-    font-size: 20px;
+    font-size: 2vh;
     font-weight: 600;
     margin-bottom: 10px;
 }
 
 #skills #skills-content .column-left p {
-    margin-right: 20px;
+    margin-right: 5vh;
 }
 
-#skills #skills-content .column-right .bars {
-    width: 100%;
-    min-width: 350px;
-    margin-bottom: 20px;
+#skills #skills-content .column-right {
+    width: 50vh;
+    text-align: left;
+    margin: 0 auto 5%;
 }
 
 #skills #skills-content .column-right .info {
-    width: 400px;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    margin-bottom: 5px;
+    margin-bottom: 1vh;
 }
 
 #skills #skills-content .column-right span {
     font-weight: 600px;
-    font-size: 18px;
+    font-size: 1.8vh;
 }
 
 #skills #skills-content .column-right .line {
-    height: 5px;
-    width: 100%;
+    height: 1vh;
     background: lightgray;
     position: relative;
-    border-radius: 50px;
+    border-radius: 2vh;
 }
 
 #skills #skills-content .column-right .line::before {
@@ -368,7 +371,7 @@ section {
     left: 0;
     top: 0;
     background: crimson;
-    border-radius: 50px;
+    border-radius: 2vh;
 }
 
 #skills #skills-content .column-right .html::before {
@@ -405,7 +408,7 @@ section {
 }
 
 #contact .title::after {
-    content: "Get in touch";
+    content: "Talk to me";
     background: #111;
 }
 
@@ -416,10 +419,8 @@ section {
 }
 
 #contact #contact-content .text {
-    width: auto;
-    font-size: 20px;
+    font-size: 2vh;
     font-weight: 500;
-    margin-bottom: 10px;
 }
 
 #contact #contact-content p {
@@ -428,12 +429,12 @@ section {
 
 #contact #contact-content #column .row {
     display: flex;
-    height: 65px;
-    align-items: center;
+    height: 6vh;
+    margin: 2vh;
 }
 
 #contact #contact-content #column .row .info {
-    margin-left: 30px;
+    margin-left: 2vh;
 }
 
 #contact #contact-content #column .row .info .subtitle {
@@ -442,9 +443,7 @@ section {
 
 .network {
     display: flex;
-    width: 500px;
-    min-width: 500px;
-    margin: auto;
+    width: 50vh;
     flex-flow: wrap;
     justify-content: space-around;
 }
