--- a/assets/style.css
+++ b/assets/style.css
@@ -480,7 +480,7 @@ footer span a:hover {
         content: url("./images/iconmonstr-menu-6.svg");
         filter: invert();
     }
-    #menu:active {
+    #menu:hover {
         content: normal;
         filter: none;
         display: flex;
@@ -490,7 +490,6 @@ footer span a:hover {
         top: 0;
         left: 0;
         background: rgba(0, 0, 0, 0.9);
-        text-align: center;
         transition: all 0.7s ease;
     }
     #menu a:active {
