--- a/assets/style.css
+++ b/assets/style.css
@@ -480,7 +480,6 @@ footer span a:hover {
         content: url("./images/iconmonstr-menu-6.svg");
         filter: invert();
     }
-    #menu:hover,
     #menu:active {
         content: normal;
         filter: none;
@@ -493,8 +492,7 @@ footer span a:hover {
         background: rgba(0, 0, 0, 0.9);
         transition: all 0.7s ease;
     }
-    #menu a:active,
-    #menu a:hover {
+    #menu a:active {
         all: none;
         display: none;
     }
