title fixed so shrink my projects

--- a/assets/style.css
+++ b/assets/style.css
@@ -279,7 +279,7 @@ section {
 }
 
 #Projects .title::after {
-    content: "I am working on";
+    content: "Working on";
     background-color: #111;
 }
 
