--- a/assets/style.css
+++ b/assets/style.css
@@ -174,6 +174,9 @@ section {
     justify-content: center;
 }
 
+
+/*Title and subtitle */
+
 .max-width .title {
     position: relative;
     font-size: 40px;
@@ -368,23 +371,12 @@ section {
 
 #contact img {
     filter: invert();
-    width: 25px;
-    height: 25px;
-}
-
-#contact #contact-content .text {
-    font-size: 2vh;
-    font-weight: 500;
-}
-
-#contact #contact-content p {
-    text-align: justify;
+    width: 30px;
 }
 
 #contact #contact-content #column .row {
     display: flex;
-    height: 6vh;
-    margin: 2vh;
+    padding: 6vh 0 0;
 }
 
 #contact #contact-content #column .row .info {
