--- a/assets/style.css
+++ b/assets/style.css
@@ -231,7 +231,7 @@ section {
 
 #about-content .column-right {
     width: 50vh;
-    text-align: justify;
+    text-align: left;
     margin: 0 auto 5%;
 }
 
@@ -246,7 +246,7 @@ section {
 }
 
 #about-content .column-right p {
-    text-align: justify;
+    text-align: left;
 }
 
 #about-content .column-right a,
