--- a/assets/style.css
+++ b/assets/style.css
@@ -1,159 +1,158 @@
 /*Font Ubuntu by Google: https://fonts.google.com */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap");
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-family: 'Ubuntu';
-    scroll-behavior: smooth;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Ubuntu";
+  scroll-behavior: smooth;
 }
-
 
 /*padding order top and bottom,  right and left*/
 
 .max-width {
-    padding: 0 8vh;
+  padding: 0 8vh;
 }
-
 
 /*Logo bar*/
 
 #navigation-bar {
-    position: absolute;
-    list-style: none;
-    width: 100%;
-    padding: 5vh 0;
-    /* Add the gradiant coming from the TOP*/
-    background: -webkit-radial-gradient( 10% 0%, 100% 30%, rgb(0, 0, 0) 0%, rgba(0, 0, 0, 0) 230%);
+  position: absolute;
+  list-style: none;
+  width: 100%;
+  padding: 5vh 0;
+  /* Add the gradiant coming from the TOP*/
+  background: -webkit-radial-gradient(
+    10% 0%,
+    100% 30%,
+    rgb(0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 230%
+  );
 }
 
 #navigation-bar #logo a {
-    color: #fff;
-    font-size: 3vh;
-    font-weight: 600;
+  color: #fff;
+  font-size: 3vh;
+  font-weight: 600;
 }
 
 #navigation-bar #logo a span {
-    color: crimson;
+  color: crimson;
 }
-
 
 /*Menu bar*/
 
 #menu {
-    float: right;
-    align-items: center;
+  float: right;
+  align-items: center;
 }
 
 #navigation-bar #menu li {
-    display: inline-block;
+  display: inline-block;
 }
 
 #navigation-bar #menu li a {
-    color: #fff;
-    font-size: 1.9vh;
-    font-weight: 500;
-    margin-left: 3vh;
-    /*Smooth transition to the hover action*/
-    transition: color 0.4s ease;
+  color: #fff;
+  font-size: 1.9vh;
+  font-weight: 500;
+  margin-left: 3vh;
+  /*Smooth transition to the hover action*/
+  transition: color 0.4s ease;
 }
 
 #navigation-bar #menu li a:hover {
-    color: crimson;
+  color: crimson;
 }
-
 
 /*Scroll up buttom*/
 
 .scroll-up-buttom {
-    position: fixed;
-    height: 5vh;
-    width: 5vh;
-    background: crimson;
-    right: 4vh;
-    bottom: 2vh;
-    text-align: center;
-    line-height: 7vh;
-    z-index: 9999;
-    border-radius: 1vh;
-    cursor: pointer;
-    transition: all 1s ease;
-    pointer-events: auto;
-    opacity: 0.01;
+  position: fixed;
+  height: 5vh;
+  width: 5vh;
+  background: crimson;
+  right: 4vh;
+  bottom: 2vh;
+  text-align: center;
+  line-height: 7vh;
+  z-index: 9999;
+  border-radius: 1vh;
+  cursor: pointer;
+  transition: all 1s ease;
+  pointer-events: auto;
+  opacity: 0.01;
 }
 
 .scroll-up-buttom:hover {
-    opacity: 1;
-    transition: all 1s ease;
+  opacity: 1;
+  transition: all 1s ease;
 }
 
 #navigator-up:hover .scroll-up-buttom {
-    opacity: 1;
-    transition: all 1s ease;
+  opacity: 1;
+  transition: all 1s ease;
 }
-
 
 /*Home section*/
 
 #home {
-    display: flex;
-    background: url("./images/cherries.webp") no-repeat center;
-    background-size: cover;
-    /*To fill to the height*/
-    background-color: black;
-    /*Size of the screen*/
-    height: 100vh;
-    min-height: 100vh;
-    color: #fff;
+  display: flex;
+  background: url("./images/cherries.webp") no-repeat center;
+  background-size: cover;
+  /*To fill to the height*/
+  background-color: black;
+  /*Size of the screen*/
+  height: 100vh;
+  min-height: 100vh;
+  color: #fff;
 }
 
 #home .max-width {
-    margin: auto 0 auto 4vh;
+  margin: auto 0 auto 4vh;
 }
 
 #home #home-content #text-1 {
-    font-size: 3vh;
+  font-size: 3vh;
 }
 
 #home #home-content #text-2 {
-    font-size: 7vh;
-    font-weight: 600;
-    margin-left: -0.3vh;
+  font-size: 7vh;
+  font-weight: 600;
+  margin-left: -0.3vh;
 }
 
 #home #home-content #text-3 {
-    font-size: 4vh;
-    margin: 0.1vh 0vh;
+  font-size: 4vh;
+  margin: 0.1vh 0vh;
 }
 
 #home #home-content #text-3 span {
-    color: crimson;
-    font-weight: 500;
+  color: crimson;
+  font-weight: 500;
 }
 
-#home #home-content a {
-    display: inline-block;
-    background: crimson;
-    color: #fff;
-    font-size: 2.3vh;
-    padding: 1vh 3.6vh;
-    margin-top: 2vh;
-    border-radius: 6px;
-    border: 0.3vh solid crimson;
-    transition: all 0.3s ease;
+#home a {
+  display: inline-block;
+  background: crimson;
+  color: #fff;
+  font-size: 2.3vh;
+  padding: 1vh 3.6vh;
+  margin-top: 2vh;
+  border-radius: 6px;
+  border: 0.3vh solid crimson;
+  transition: all 0.3s ease;
 }
 
 section {
-    padding: 100px 0;
+  padding: 100px 0;
 }
 
-#home #home-content a:hover {
-    color: crimson;
-    background: none;
+#home a:hover {
+  color: crimson;
+  background: none;
 }
-
 
 /*Similar content styling shared between DIVs and Sections*/
 
@@ -161,303 +160,296 @@ section {
 #Projects,
 #skills,
 #contact {
-    padding: 60px 0;
+  padding: 60px 0;
 }
 
 #about-content,
 #card,
 #skills #skills-content,
 #contact #contact-content {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
-
 
 /*Title and subtitle */
 
 .max-width .title {
-    position: relative;
-    font-size: 40px;
-    font-weight: 500;
-    margin-bottom: 60px;
-    padding-bottom: 20px;
-    text-align: center;
+  position: relative;
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 60px;
+  padding-bottom: 20px;
+  text-align: center;
 }
 
 .max-width .title::before {
-    content: "";
-    position: absolute;
-    bottom: 0px;
-    left: 50%;
-    width: 180px;
-    height: 3px;
-    background: black;
-    transform: translateX(-50%);
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  width: 180px;
+  height: 3px;
+  background: black;
+  transform: translateX(-50%);
 }
 
 .max-width .title::after {
-    position: absolute;
-    bottom: -13px;
-    left: 50%;
-    font-size: 20px;
-    color: crimson;
-    padding: 5px;
-    background: white;
-    /*To translate the axys of the subtitle in the midle*/
-    transform: translateX(-50%);
+  position: absolute;
+  bottom: -13px;
+  left: 50%;
+  font-size: 20px;
+  color: crimson;
+  padding: 5px;
+  background: white;
+  /*To translate the axys of the subtitle in the midle*/
+  transform: translateX(-50%);
 }
-
 
 /*About section*/
 
 #about .title::after {
-    content: "Who I am";
+  content: "Who I am";
 }
 
 #about-content .column-left {
-    width: 45%;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto 5%;
+  width: 45%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto 5%;
 }
 
 #about-content .column-left img {
-    width: 375px;
-    height: auto;
-    border-radius: 6px;
+  width: 375px;
+  height: auto;
+  border-radius: 6px;
 }
 
 #about-content .column-right {
-    width: 50vh;
-    text-align: left;
-    margin: 0 auto 5%;
+  width: 50vh;
+  text-align: left;
+  margin: 0 auto 5%;
 }
 
 #about-content .column-right .text {
-    font-size: 25px;
-    font-weight: 600;
-    margin-bottom: 10px;
+  font-size: 25px;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 
 #about-content .column-right span {
-    color: crimson;
+  color: crimson;
 }
 
 #about-content .column-right p {
-    text-align: left;
+  text-align: left;
 }
 
 #about-content .column-right a,
 #skills #skills-content .column a {
-    display: inline-block;
-    background: crimson;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 500;
-    padding: 10px 30px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid crimson;
-    transition: all 0.3s ease;
+  display: inline-block;
+  background: crimson;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  transition: all 0.3s ease;
 }
 
 #about-content .column-right a:hover,
 #skills #skills-content .column a:hover {
-    color: crimson;
-    background: none;
+  color: crimson;
+  background: none;
 }
-
 
 /*Projects section*/
 
 #Projects {
-    color: #fff;
-    background: #111;
-    /*background: url("./images/tea_html_coding.jpg") center no-repeat;*/
-    /* This will cause the image to shrink to fit
+  color: #fff;
+  background: #111;
+  /*background: url("./images/tea_html_coding.jpg") center no-repeat;*/
+  /* This will cause the image to shrink to fit
     the space it has, should the viewport size be
     smaller than the image. */
-    background-size: cover;
+  background-size: cover;
 }
 
 #Projects .title::before {
-    background: white;
+  background: white;
 }
 
 #Projects .title::after {
-    content: "Working on";
-    background-color: #111;
+  content: "Working on";
+  background-color: #111;
 }
 
 #Projects #Projects-content .box {
-    width: 26vh;
-    min-width: 280px;
-    height: 290px;
-    background-color: #222;
-    text-align: center;
-    border-radius: 6px;
-    padding: 2vh 2.5vh;
-    cursor: pointer;
-    transition: all 0.3s ease;
+  width: 26vh;
+  min-width: 280px;
+  height: 290px;
+  background-color: #222;
+  text-align: center;
+  border-radius: 6px;
+  padding: 2vh 2.5vh;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 #Projects #Projects-content .box:hover {
-    background: crimson;
-    transform: scale(1.08);
+  background: crimson;
+  transform: scale(1.08);
 }
 
 #Projects #Projects-content a {
-    color: white;
-    margin: 0.8vh 0.8vh 0.8vh;
-    margin: min(0.5vh 0.5vh 0.5vh)
+  color: white;
+  margin: 0.8vh 0.8vh 0.8vh;
+  margin: min(0.5vh 0.5vh 0.5vh);
 }
 
 #Projects #Projects-content #card .img {
-    filter: invert();
-    width: 40px;
-    height: auto;
+  filter: invert();
+  width: 40px;
+  height: auto;
 }
 
 #Projects #Projects-content #card .box .text {
-    font-size: 25px;
-    font-weight: 500;
-    margin: 10px 0 7px 0;
+  font-size: 25px;
+  font-weight: 500;
+  margin: 10px 0 7px 0;
 }
-
 
 /*Skills section*/
 
 #skills .title::after {
-    content: "My Skills";
-    background: #fff;
+  content: "My Skills";
+  background: #fff;
 }
 
 #skills #skills-content .column {
-    text-align: center;
-    width: 80vh;
-    min-width: 40vh;
-    margin: 0 auto 5%;
+  text-align: center;
+  width: 80vh;
+  min-width: 40vh;
+  margin: 0 auto 5%;
 }
 
 #skills #skills-content .column .text {
-    font-size: 2vh;
-    font-weight: 600;
-    margin-bottom: 10px;
+  font-size: 2vh;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 
 #skills #skills-content .column p {
-    text-align: justify;
+  text-align: justify;
 }
-
 
 /*Contact section*/
 
 #contact,
 #contact a {
-    color: #fff;
-    background: #111;
+  color: #fff;
+  background: #111;
 }
 
 #contact .title::before {
-    background: white;
+  background: white;
 }
 
 #contact .title::after {
-    content: "Talk to me";
-    background: #111;
+  content: "Talk to me";
+  background: #111;
 }
 
 #contact img {
-    filter: invert();
-    width: 30px;
+  filter: invert();
+  width: 30px;
 }
 
 #contact #contact-content #column .row {
-    display: flex;
-    padding: 6vh 6vh 0vh 6vh;
+  display: flex;
+  padding: 6vh 6vh 0vh 6vh;
 }
 
 #contact #contact-content #column .row .info {
-    margin-left: 2vh;
+  margin-left: 2vh;
 }
 
 #contact #contact-content #column .row .info .subtitle {
-    color: rgb(133, 133, 133);
+  color: rgb(133, 133, 133);
 }
 
 .contact-subtitle {
-    display: flex;
-    width: 80vh;
-    flex-flow: wrap;
-    text-align: justify;
+  display: flex;
+  width: 80vh;
+  flex-flow: wrap;
+  text-align: justify;
 }
-
 
 /*Footer section*/
 
 footer {
-    padding: 20px 23px;
+  padding: 20px 23px;
 }
 
 footer span a {
-    color: crimson;
+  color: crimson;
 }
 
 footer span a:hover {
-    font-weight: 900;
-    transition: all 0.3s ease;
+  font-weight: 900;
+  transition: all 0.3s ease;
 }
-
 
 /*Responsive menu and Main content color swap*/
 
 .responsive {
-    display: none;
+  display: none;
 }
 
-@media (max-width:900px) {
-    .max-width {
-        padding: 0 50px;
-    }
-    .responsive {
-        display: block;
-        float: right;
-        align-items: center;
-    }
-    .menu-responvive-img {
-        filter: invert();
-    }
-    #menuresponsivo,
-    #menu {
-        display: none;
-    }
-    #menuresponsivo:target {
-        display: block;
-        position: fixed;
-        height: 100%;
-        width: 100%;
-        top: 0;
-        left: 0;
-        background: rgba(0, 0, 0, 0.9);
-        transition: all 0.7s ease;
-    }
-    #menuresponsivo:target li {
-        text-align: center;
-        margin: 8vh;
-    }
-    #click a:target {
-        display: block;
-    }
-    /*Invert colors on the main content*/
-    #home #home-content #text-2 {
-        color: crimson;
-    }
-    #home #home-content #text-3 span {
-        color: white;
-    }
-    #skills #skills-content .column {
-        text-align: center;
-    }
+@media (max-width: 900px) {
+  .max-width {
+    padding: 0 50px;
+  }
+  .responsive {
+    display: block;
+    float: right;
+    align-items: center;
+  }
+  .menu-responvive-img {
+    filter: invert();
+  }
+  #menuresponsivo,
+  #menu {
+    display: none;
+  }
+  #menuresponsivo:target {
+    display: block;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.9);
+    transition: all 0.7s ease;
+  }
+  #menuresponsivo:target li {
+    text-align: center;
+    margin: 8vh;
+  }
+  #click a:target {
+    display: block;
+  }
+  /*Invert colors on the main content*/
+  #home #home-content #text-2 {
+    color: crimson;
+  }
+  #home #home-content #text-3 span {
+    color: white;
+  }
+  #skills #skills-content .column {
+    text-align: center;
+  }
 }
